# Geant4-B1-Advance

./: .gitignore  B1.cc  CMakeLists.txt  GNUmakefile  Geant4MicroLightBNZS.cc  README.md  README2.md  StageA.mac  StageC_OpticalRVE.mac  StageD_OpticalHomogenization.mac  batch_run.sh  init_vis.mac  run.mac  run.sh  runA.sh  stageA_batch_placements.sh  stageB_balanced_cycle.py  stageC_macro_coupling.py  stageC_make_zns_sources.py  stageC_run_batch.py  stageC_run_thickness_batch.py  stageD_run_batch.py
Input/neutron_capture_positions/1-2/: 400_neutron_capture_positions.csv
Input/placements/: check_overlap.py
Input/placements/1-1.5/: placement_0.64_0001.csv  placement_f_0.64_0002.csv  placement_f_0.64_0003.csv  (+56 more)
Output/: 400_alpha_li_steps.csv
include/: ActionInitialization.hh  AnalysisConfig.hh  AnalysisMessenger.hh  DetectorConstruction.hh  ModeEventAction.hh  ModePrimaryGeneratorAction.hh  ModeRunAction.hh  ModeSteppingAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  StageARunAction.hh
include/core/: ActionInitialization.hh  AnalysisConfig.hh  AnalysisMessenger.hh  DetectorConstruction.hh
include/modes/: ModeEventAction.hh  ModePrimaryGeneratorAction.hh  ModeRunAction.hh  ModeSteppingAction.hh
include/stageA/: StageAPrimaryGeneratorAction.hh  StageARunAction.hh  StageAStackingAction.hh  StageASteppingAction.hh
include/stageB/: EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
include/stageC/: StageCOpticalPrimaryGeneratorAction.hh  StageCOpticalRunAction.hh  StageCOpticalSource.hh  StageCOpticalSteppingAction.hh
include/stageD/: StageDOpticalEventAction.hh  StageDOpticalPrimaryGeneratorAction.hh  StageDOpticalRunAction.hh  StageDOpticalStats.hh  StageDOpticalSteppingAction.hh  StageDReentrySampler.hh
scripts/: calibrate_optical_params_with_Leff.py  merge_stageD_optical_params.py  normalize_paths.py
src/: ActionInitialization.cc  AnalysisConfig.cc  AnalysisMessenger.cc  DetectorConstruction.cc  ModeEventAction.cc  ModePrimaryGeneratorAction.cc  ModeRunAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  StageAPrimaryGeneratorAction.cc  StageARunAction.cc  StageAStackingAction.cc  StageASteppingAction.cc  SteppingAction.cc
src/core/: ActionInitialization.cc  AnalysisConfig.cc  AnalysisMessenger.cc  DetectorConstruction.cc  PhysicsList.cc
src/modes/: ModeEventAction.cc  ModePrimaryGeneratorAction.cc  ModeRunAction.cc  ModeSteppingAction.cc
src/stageA/: StageARunAction.cc  StageAStackingAction.cc
src/stageB/: EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
src/stageC/: StageCOpticalPrimaryGeneratorAction.cc  StageCOpticalRunAction.cc  StageCOpticalSteppingAction.cc
src/stageD/: StageDOpticalEventAction.cc  StageDOpticalPrimaryGeneratorAction.cc  StageDOpticalRunAction.cc  StageDOpticalSteppingAction.cc  StageDReentrySampler.cc
(+347 files in other folders)
